[refs #74884] Fix right align search bar and utils menu.

--- a/docs/Redesign Docs/RedesignTheme/css/styles.scss
+++ b/docs/Redesign Docs/RedesignTheme/css/styles.scss
@@ -406,6 +406,10 @@ footer {
     content: '';
   }
 
+  .list-inline.land-list-separated li:last-child {
+    margin-right: -$dim2;
+  }
+
   .list-inline > li {
     padding-right: 0px;
   }
